# aoc-24

./: .gitignore  meson.build
src/day-01/: main.cpp
src/day-02/: main.cpp
src/day-03/: main.cpp
src/day-04/: main.cpp
src/utils/: io.cpp  io.hpp
