project(
  'aoc-24',
  'cpp',
  version: '0.1',
  default_options: ['warning_level=3', 'cpp_std=c++11']
)


day_01_exe = executable(
  'day-01',
  sources: './src/day-01/main.cpp',
)

day_02_exe = executable(
  'day-02',
  sources: './src/day-02/main.cpp',
)

day_03_exe = executable(
  'day-03',
  sources: './src/day-03/main.cpp',
)


test('day-01', day_01_exe)
test('day-02', day_02_exe)
test('day-03', day_03_exe)
